PP  for RoomDetails

--- a/src/pug/blocks/pages/RoomDetails.pug
+++ b/src/pug/blocks/pages/RoomDetails.pug
@@ -37,22 +37,24 @@ block body
     .RoomDetails__content
       .RoomDetails__left-side.mt-70
         .RoomDetails__block
-          h3 Сведения о номере
+          h3.RoomDetails_h3 Сведения о номере
           +option('var(--smile)','Комфорт','Шумопоглощающие стены')
           +option('var(--home)','Удобство','Окно в каждой из спален')
           +option('var(--fire)','Уют','Номер оснащён камином')
         .RoomDetails__block
-          h3 Впечатление о номере
+          h3.RoomDetails_h3  Впечатление от номера
           +chart
-        .mt-30
-          h3 Отзывы посетителей номера
+        .RoomDetails_feedback
+          h3.RoomDetails_h3 Отзывы посетителей номера
+          span.count-feedback 2 отзыва
         +feedback('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
-        +feedback('Патрисия Стёклышкова','Неделю назад','Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
-        .RoomDetails__block.mt-30
-          h3 Правила
+        .mt-10
+          +feedback('Патрисия Стёклышкова','Неделю назад','Обслуживание на высоте! Всё аккуратно, чисто. Завтраки в номер советую заказать, каждый день новое блюдо и десерт как комплимент')
+        .RoomDetails__block.mt-20
+          h3.rule Правила
           +bullet-list
-        .RoomDetails__cancel.mt-30
-          h3 Отмена 
+        .RoomDetails__cancel
+          h3.RoomDetails_h3 Отмена 
           span Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
       .RoomDetails__right-side.mt-70
         .block-card
