--- a/src/pug/blocks/__elements/chart/chart.scss
+++ b/src/pug/blocks/__elements/chart/chart.scss
@@ -3,10 +3,11 @@ figure {
     display: flex;
     justify-content: space-around;
     flex-direction: column;
-    margin-left: -15px;
-    margin-right: -15px;
+    width: 0;
+    margin-left: 50px;
+    margin-top: -96px;
     width: 200px;
-    margin-left: 45px;
+    
 }
 @media (min-width: 768px) {
     figure {
@@ -15,7 +16,7 @@ figure {
 }
 .chart, .chart-key {
     flex: 1;
-    padding-left: 15px;
+    padding-left: 9px;
     padding-right: 15px;
     line-height: 15px;
 }
@@ -37,21 +38,21 @@ figure {
     font-size: .4em;
     line-height: 1;
     text-anchor: middle;
-    transform: translateY(-0.25em);
+    transform: translateY(-0.1em);
     fill: #BC9CFF;
 }
 .chart-label {
     font-family: var(--montserrat_bold);
     font-style: normal;
     font-weight: bold;
-    font-size: .2em;
+    font-size: .22em;
     text-anchor: middle;
-    transform: translateY(0.7em);
+    transform: translateY(1.5em);
     text-transform: uppercase;
     fill: #BC9CFF;
 }
 .chart-key {
-    align-self: flex-end;
+    margin-top: 49px;
 }
 .chart-key-list {
     margin: 0;
@@ -68,7 +69,11 @@ figure {
 .chart-key [class*="shape-"] {
     margin-right: 6px;
 }
-
+.shape-circle {
+    color: var(--dark-75);
+    font-size: 14px;
+    line-height: 16px;
+}
 .shape-excellent:before {
     content: '';
     position: absolute;
