--- a/src/pug/blocks/pages/SearchRoom.scss
+++ b/src/pug/blocks/pages/SearchRoom.scss
@@ -35,6 +35,8 @@ body {
     flex-wrap: wrap;
     width: 100%;
     z-index: 1;
+    padding-bottom: 72px;
+    border-bottom: 1px solid var(--dark-25);
 
     .content__text {
         width: 100%;
@@ -57,6 +59,44 @@ body {
 .content__left-side {
     margin-left: 140px;
     width: 266px;
+    h3:first-child {
+        margin-bottom: 5px;
+        margin-top: 0;
+        letter-spacing: 0px;
+    }
+    h3:nth-child(3) {
+        margin-bottom: 5px;
+    }
+    h3:nth-child(5) {
+        margin-top: 34px;
+        margin-bottom: 22px;
+    }
+    h3:nth-child(8) {
+        margin-bottom: 5px;
+    }
+    .checkbox_rich .checkbox_row:nth-child(2) {
+        margin-top: 5px;
+    }
+    .checkbox_rich .list__item {
+        width: 230px;
+        letter-spacing: 0px;
+    }
+    .range {
+        margin-bottom: 34px;
+    }
+    .checkbox label {
+        margin-top: 10px;
+    }
+    .list__item {
+        letter-spacing: 1.1px;
+    }
+    h3:nth-child(11) {
+        margin-top: 24px;
+        margin-bottom: 5px;
+    }
+    div:nth-child(13) {
+        margin-top: 21px;
+    }
 }
 .content__right-side {
     width: calc(100vw - 496px);
@@ -64,8 +104,17 @@ body {
     display: flex;
     flex-wrap: wrap;
 
-    h3 {
+    h3:first-child {
         width: 100%;
+        font-family: OpenSans;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 30px;
+        text-transform: none;
+        letter-spacing: -.4px;
+        margin-top: 29px;
+        margin-bottom:2px;
     }
 }
 .SearchRoom {
@@ -74,8 +123,8 @@ body {
     flex-wrap: wrap;
 
     &__block {
-        margin-right: 10px;
-        margin-bottom: 20px;
+        margin-right: 12px;
+        margin-bottom: 23px;
     }
 }
 
@@ -85,11 +134,21 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     align-content: center;
+    margin-top: 19px;
+}
+.simple-pagination {
+    margin-left: -5px;
 }
 .pagination--text {
     font-size: 14px;
     color: var(--dark-75);
     line-height: 24px;
-    font-family:  "Montserrat-reg";
-    margin: 0 auto;
+    padding-top: 3px;
+    padding-right: 126px;
+}
+.footer {
+    .main {
+        margin-left: 0;
+        margin-top: -13px;
+    }
 }
