creating page Sign In and Register

--- a/src/pug/blocks/__elements/Cards.pug
+++ b/src/pug/blocks/__elements/Cards.pug
@@ -40,7 +40,7 @@ block body
         +toggle('получать спецпредложения')(class="mt-10")
         +button('ПЕРЕЙТИ К ОПЛАТЕ')(class=['btn--fill','btn--big','mt-30'])
         .auth.mt-30
-          span Уже есть аккаунт на Toxin
+          span.auth_span Уже есть аккаунт на Toxin
           +button('ВОЙТИ')(class=['btn--enable', 'btn--border'])
     .block
       .block-card
