--- a/src/pug/blocks/__elements/Cards.scss
+++ b/src/pug/blocks/__elements/Cards.scss
@@ -61,6 +61,8 @@ body {
         span {
             font-size: 0.875rem;
             line-height: 1.125rem;
+        }
+        .auth_span {
             color: #000;
         }
     }
