--- a/src/pug/blocks/__elements/Form_Elements.pug
+++ b/src/pug/blocks/__elements/Form_Elements.pug
@@ -21,106 +21,106 @@ include ./feedback/feedback
 
 block body
   +template-logo
-  .block(style="margin: 20px 0 0 141px;")
-    .elem
-      h3 text-field
-      span default
-      +text-field('text','EMAIL')
-    .elem.mt-5
-      h3 text-field
-      span hover/focus
-      +text-field('text','This is pretty awesome')(class="color-75")
-    .elem.mt-5
-      h3 dropdown
-      span DEFAULT
-      +dropdown('','','Сколько Гостей')(class="arrow--down")
-    .elem.mt-10
-      h3 masked text field
-      span default
-      +text-field('text','')(class="datepicker-single")
-    .elem.mt-28
-      +two-input()
-    .elem.mt-28(style="width: 266px;")
-      h3 filter date dropdown
-      +dropdown()(class=["size-medium",'arrow--down','color-75'])
-    .elem.mt-30.flex-size-medium
-      h3 subscription text field
-      +text-field('text','Email','arrow--forward')(class='flex-size-medium')
-    .elem.flex-size-medium(style="margin-top: 85px;")
-      h3 dropdown
-      span default
-    .elem.flex-size-medium
-      +dropdown('','','2 спальни, 2 кровати')(class=["flex-size-medium",'arrow--down'])
-    .elem.flex-size-medium(style="margin-top: 9px;")
-      h3 dropdown
-      span Expanded
-    .elem.flex-size-medium
-      +dropdown('Сonveniences','','2 спальни, 2 кровати')(class=["size-medium",'expanded','arrow--down'])
-    .size-medium(style="margin-top: 157px;")
-      +checkbox-expandle('expandable checkbox list','')
+  .main
+    .block
+      .elem
+        h3 text-field
+        span default
+        +text-field('text','EMAIL')
+      .elem.mt-5
+        h3 text-field
+        span hover/focus
+        +text-field('text','This is pretty awesome')(class="color-75")
+      .elem.mt-5
+        h3 dropdown
+        span DEFAULT
+        +dropdown('','','Сколько Гостей')(class="arrow--down")
+      .elem
+        h3 masked text field
+        span default
+        +text-field('text','')(class="datepicker-single")
+      .elem
+        +two-input()
+      .elem
+        h3 filter date dropdown
+        +dropdown()(class=["size-medium",'arrow--down','color-75'])
+      .elem.flex-size-medium
+        h3 subscription text field
+        +text-field('text','Email','arrow--forward')(class='flex-size-medium')
+      .elem.flex-size-medium
+        h3 dropdown
+        span default
+      .elem.flex-size-medium
+        +dropdown('','','2 спальни, 2 кровати')(class=["flex-size-medium",'arrow--down'])
+      .elem.flex-size-medium
+        h3 dropdown
+        span Expanded
+      .elem.flex-size-medium
+        +dropdown('Сonveniences','','2 спальни, 2 кровати')(class=["size-medium",'expanded','arrow--down'])
+      .size-medium
+        +checkbox-expandle('expandable checkbox list','')
+        .mt-20
+          +checkbox-expandle('expandable checkbox list',['Завтрак','Письменный стол','Стул для кормления','Кроватка','Телевизор','Шампунь','Телевизор','Шампунь'])
+        
+
+
+    
+    .block
       .mt-20
-        +checkbox-expandle('expandable checkbox list',['Завтрак','Письменный стол','Стул для кормления','Кроватка','Телевизор','Шампунь','Телевизор','Шампунь'])
-      
+        h3 checkbox Buttons
+        +checkbox('Checkbox Buttons')
+      h3 Radio Buttons
+      .mt-15
+        +radio-button()
+      h3 Toggle
+      .mt-10
+        +toggle('Получать спецпредложения')(checked)
+      .mt-10
+        +toggle('Получать спецпредложения')
+      h3 like button
+      .mt-15.elem
+        +like-buttons(2,'dislake')
+        +like-buttons(12,'like')
+      h3 rate button
+      .mt-15.elem
+        +rate-button('stars-left')
+        +rate-button('stars-right')
+      .elem
+        h3 dropdown
+        +dropdown('People',true,'Сколько гостей')(class="arrow--down")
+      .elem
+        h3 rich Checkbox Buttons
+        .mt-5
+          +checkbox_rich()
 
-
-  
-  .block(style="margin-left: 126px")
-    .mt-20
-      h3 checkbox Buttons
-      +checkbox('Checkbox Buttons')
-    h3(style="margin-top: 37px;") Radio Buttons
-    .mt-15
-      +radio-button()
-    h3(style="margin-top: 45px;") Toggle
-    .mt-10
-      +toggle('Получать спецпредложения')(checked)
-    .mt-10
-      +toggle('Получать спецпредложения')
-    h3(style="margin-top: 36px") like button
-    .mt-15.elem(style="justify-content: flex-start;")
-      +like-buttons(2,'dislake')
-      +like-buttons(12,'like')
-    h3(style="margin-top: 41px;") rate button
-    .mt-15.elem(style="justify-content: flex-start;")
-      +rate-button('stars-left')
-      +rate-button('stars-right')
-    .elem(style="margin-top: 157px;")
+    .block
+      .mt-20
+        h3 Range slider
+      .range(style="margin-top: -18px;")
+        input(type="text" class="js-range-slider" name="my_range" value="")
+      h3 Buttons
+        .buttons-line
+          +button('CLICK ME')(class=['btn--enable','btn--fill'])
+          +button('CLICK ME')(class=['btn--disable','btn--fill'])
+        .buttons-line
+          +button('CLICK ME')(class=['btn--enable', 'btn--border'])
+          +button('CLICK ME')(class=['btn--disable', 'btn--border'])
+        .buttons-line
+          +button('CLICK ME')(class=['btn--enable','btn--simple'])
+          +button('CLICK ME')(class=['btn--sdisable','btn--simple'])
+        .buttons-line
+          +button('ПЕРЕЙТИ К ОПЛАТЕ')(class=['btn--fill','btn--big'])
+      h3 pagination
+        .pagination
+        span.pagination--text 1 – 12 из 100+ вариантов аренды
       h3 dropdown
-      +dropdown('People',true,'Сколько гостей')(class="arrow--down")
-    .elem(style="margin-top: 245px;")
-      h3(style="width: 100%;") rich Checkbox Buttons
-      .mt-5
-        +checkbox_rich()
-
-  .block(style="margin-left: 72px;")
-    .mt-20
-      h3 Range slider
-    .range(style="margin-top: -18px;")
-      input(type="text" class="js-range-slider" name="my_range" value="")
-    h3(style="margin-top: 33px;") Buttons
-      .buttons-line
-        +button('CLICK ME')(class=['btn--enable','btn--fill'])
-        +button('CLICK ME')(class=['btn--disable','btn--fill'])
-      .buttons-line(style="margin-top: 29px;")
-        +button('CLICK ME')(class=['btn--enable', 'btn--border'])
-        +button('CLICK ME')(class=['btn--disable', 'btn--border'])
-      .buttons-line(style="margin-top: 26px;")
-        +button('CLICK ME')(class=['btn--enable','btn--simple'])
-        +button('CLICK ME')(class=['btn--sdisable','btn--simple'])
-      .buttons-line(style="margin-top: 27px;")
-        +button('ПЕРЕЙТИ К ОПЛАТЕ')(class=['btn--fill','btn--big'])
-    h3(style="margin-top: 35px; width:100%;") pagination
-      .pagination
-      span.pagination--text 1 – 12 из 100+ вариантов аренды
-    .mt-20(style="margin-top: 357px;")
-    h3 dropdown
-    +dropdown('People',true,'3 гостя')(class="arrow--down")
-    .elem(style="margin-top: 245px;")
-      h3(style="margin-bottom: 8px;") bulet list
-      +bullet-list()
+      +dropdown('People',true,'3 гостя')(class="arrow--down")
+      .elem
+        h3 bulet list
+        +bullet-list()
 
   .footer
-    .wrapper_content(style="margin-left: 142px;")
+    .wrapper_content
       +option('var(--smile)','Комфорт','Шумопоглощающие стены')
       .mt-5
         +option('var(--home)','Удобство','Окно в каждой из спален')
