--- a/src/pug/blocks/__elements/checkbox_rich/checkbox_rich.scss
+++ b/src/pug/blocks/__elements/checkbox_rich/checkbox_rich.scss
@@ -1,6 +1,9 @@
 .checkbox_rich {
     .checkbox_row {
         margin:0;
+        .list__item {
+            letter-spacing: 0;
+        }
     }
     label .list__item {
         margin: 5px 0;
