--- a/src/pug/blocks/__elements/footer/footer.scss
+++ b/src/pug/blocks/__elements/footer/footer.scss
@@ -140,6 +140,10 @@
             margin: 20px auto;
         }
     }
+    .logo-text {
+        text-align: center;
+        width:75%;
+    }
     .footer .copyright {
         align-self: baseline;
     }
