--- a/src/pug/blocks/__elements/general.scss
+++ b/src/pug/blocks/__elements/general.scss
@@ -55,8 +55,8 @@ input {
     background-image: url("data:image/svg+xml,%3Csvg width='12' height='8' viewBox='0 0 12 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.40625 7.42187L1.74709e-06 6.01562L6 0.0156231L12 6.01562L10.5938 7.42187L6 2.82812L1.40625 7.42187Z' fill='%231F2041' fill-opacity='0.5'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
     background-position: right center;
-    right: 0;
-    left: 0;
+    left: -9px;
+    top: -2px
 }
 .block .size-medium {
     width: 266px;
