--- a/src/pug/blocks/pages/Landing.scss
+++ b/src/pug/blocks/pages/Landing.scss
@@ -58,27 +58,33 @@ body {
     }
 }
 .content:before {
-    background-repeat:  no-repeat;
-    background-size: auto;
-    background-size: cover;
+    background: url('../../../assets/img/background_landing.png') no-repeat;
     content: '';
     width: 100%;
     position: absolute;
-    height: 100%;
+    height: 830px;
     animation-name: background_landing;
     animation-duration: 45s;
     animation-delay: 0;
     animation-iteration-count: infinite;
+    background-size: cover;
+    background-position: center;
 }
 @keyframes background_landing {
     0% {
-        background:url('../../../assets/img/background_landing.png');
+        background: url('../../../assets/img/background_landing.png') no-repeat;
+        background-size: cover;
+        background-position: center;
     }
     50% {
-        background:url('../../../assets/img/background_landing_2.png');
+        background:url('../../../assets/img/background_landing_2.png') no-repeat;
+        background-size: cover;
+        background-position: center;
     }
     100% {
-        background:url('../../../assets/img/background_landing_3.png');
+        background:url('../../../assets/img/background_landing_3.png') no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 }
 .header .nav__ul li {
