fix for small screen

--- a/src/pug/blocks/__elements/Cards.scss
+++ b/src/pug/blocks/__elements/Cards.scss
@@ -197,3 +197,9 @@ body {
         margin-right: -3px;
     }
 }
+
+@media screen and (max-width: 500px) {
+    .block {
+        margin-left: -40px;
+    }
+}
