--- a/src/pug/blocks/pages/SearchRoom.scss
+++ b/src/pug/blocks/pages/SearchRoom.scss
@@ -152,3 +152,20 @@ body {
         margin-top: -13px;
     }
 }
+@media screen and (max-width: 760px) {
+    .content__left-side {
+        margin-left: 0;
+    }
+    .content__right-side {
+        width: 100%;
+    }
+
+    .pagination--text {
+        padding-right: 0;
+    }
+}
+@media screen and (max-width: 600px) {
+    .content__left-side {
+        display: none;
+    }
+}
