change header and footer for small screen

--- a/src/pug/blocks/__elements/footer/footer.scss
+++ b/src/pug/blocks/__elements/footer/footer.scss
@@ -140,9 +140,10 @@
             margin: 20px auto;
         }
     }
-    .logo-text {
+    .footer .logo-text {
         text-align: center;
         width:75%;
+        margin: 0 12.5%;
     }
     .footer .copyright {
         align-self: baseline;
